# ehr-relation-extraction

./: Makefile  Train on small sample.ipynb  generate_data.py  pyproject.toml  requirements.txt
bilstm_crf_ner/model/: ner_learner.py
biobert_re/: run_re.py
